[package]
name = "asvc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = {version = "0.3.0", default-features = false}
ark-ec = {version = "0.3.0", default-features = false}
ark-std = {version = "0.3.0", default-features = false}
ark-poly = {version = "0.3.0", default-features = false}
rand = { version = "0.7", default-features = false }